--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "berita-tanaman",
+  "name": "satulini",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,28 +11,37 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
-    "i18next": "^25.4.2",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.0",
+    "@supabase/supabase-js": "^2.57.4",
+    "@web3-react/core": "~6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "bs58": "^6.0.0",
+    "ethers": "^5.7.2",
+    "i18next": "^23.11.5",
     "lucide-react": "^0.541.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-i18next": "^15.7.2",
-    "react-router-dom": "^7.8.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.8",
-    "@vitejs/plugin-react": "^4.6.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "@eslint/js": "^8.57.1",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^15.8.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2",
+    "typescript-eslint": "^7.18.0",
+    "vite": "^5.3.1"
   }
 }
