--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@web3-react/core": "~6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "antd": "^5.27.4",
     "bs58": "^6.0.0",
     "ethers": "^5.7.2",
     "i18next": "^23.11.5",
